Fixed description truncation

--- a/objetslitt/assets/stylesheets/objetslitt.scss
+++ b/objetslitt/assets/stylesheets/objetslitt.scss
@@ -2,9 +2,3 @@ p {
     margin-bottom: 1em;
 }
 
-.daily-objet-description{
-    /* Not great text truncation... To be fixed.*/
-    overflow: hidden;
-    max-width: 80ch;
-    white-space: nowrap;
-}
